pass in server address and port instead of hard-coding

--- a/HelloWorld/mobile-apps.json
+++ b/HelloWorld/mobile-apps.json
@@ -8,7 +8,8 @@
         "launch_arguments": [
           { "name": "ShowDebugInfoToggleButton", "value": "true" },
           { "name": "username", "value": "Astro" }
-        ]
+        ],
+        "preview_server_enabled": true
       }
     ],
     "android": [
@@ -20,7 +21,8 @@
         "launch_arguments": [
           { "name": "ShowDebugInfoToggleButton", "value": "true" },
           { "name": "username", "value": "Astro" }
-        ]
+        ],
+        "preview_server_enabled": true
       }
     ]
   }
