--- a/HelloWorld/.gitignore
+++ b/HelloWorld/.gitignore
@@ -3,8 +3,10 @@
 # For useful gitignore templates see: https://github.com/github/gitignore
 
 # Salesforce cache
+.sf/
 .sfdx/
 .localdevserver/
+deploy-options.json
 
 # LWC VSCode autocomplete
 **/lwc/jsconfig.json
@@ -33,3 +35,6 @@ Thumbs.db
 ehthumbs.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
+
+# Local environment variables
+.env
