--- a/HelloWorld/sfdx-project.json
+++ b/HelloWorld/sfdx-project.json
@@ -5,7 +5,8 @@
       "default": true
     }
   ],
+  "name": "HelloWorld",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "49.0"
+  "sourceApiVersion": "55.0"
 }
