--- a/apps/android/LwcTestApp/settings.gradle
+++ b/apps/android/LwcTestApp/settings.gradle
@@ -1,2 +1,17 @@
-include ':app'
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 rootProject.name = "Lwc Test App"
+include ':app'
