--- a/ImageCapture/config/project-scratch-def.json
+++ b/ImageCapture/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "karin.cohen company",
+  "orgName": "my company",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
   "settings": {
