--- a/UploadAndAnnotateImages/sfdx-project.json
+++ b/UploadAndAnnotateImages/sfdx-project.json
@@ -5,7 +5,7 @@
       "default": true
     }
   ],
-  "name": "ImageCapture",
+  "name": "UploadAndAnnotateImages",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "55.0"
