--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     },
     "license": "MIT",
     "scripts": {
-        "format": "prettier --check '**/*.{js,ts,json,md}'",
-        "format:fix": "prettier --write '**/*.{js,ts,json,md}'",
-        "lint:md": "markdownlint '**/*.md'",
-        "lint:mdfix": "markdownlint --fix '**/*.md'"
+        "format": "prettier --check '**/*.{js,ts,json}'",
+        "format:fix": "prettier --write '**/*.{js,ts,json}'"
     },
     "devDependencies": {
         "husky": "^8.0.2",
         "lint-staged": "^13.1.0",
-        "markdownlint-cli": "^0.33.0",
         "prettier": "^2.8.2"
     },
     "dependencies": {},
