--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "type": "git",
         "url": "https://github.com/forcedotcom/LWC-Mobile-Samples"
     },
-    "license": "MIT",
+    "license": "CC0",
     "scripts": {
         "format": "prettier --check '**/*.{js,ts,json}'",
         "format:fix": "prettier --write '**/*.{js,ts,json}'"
