--- a/UploadAndAnnotateImages/package.json
+++ b/UploadAndAnnotateImages/package.json
@@ -12,7 +12,7 @@
     "test:unit:coverage": "sfdx-lwc-jest --coverage",
     "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-    "postinstall": "husky install",
+    "postinstall": "cd ../ && husky install ./UploadAndAnnotateImages/.husky",
     "precommit": "lint-staged"
   },
   "devDependencies": {
