--- a/FindNearby/package.json
+++ b/FindNearby/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "format": "prettier --check '**/*.{js,ts,json}'",
     "format:fix": "prettier --write '**/*.{js,ts,json}'",
-    "prepare": "husky install",
+    "prepare": "",
     "lint": "eslint **/{aura,lwc}/**",
     "test": "npm run test:unit",
     "test:unit": "sfdx-lwc-jest",
@@ -38,13 +38,7 @@
     ],
     "**/{aura,lwc}/**": []
   },
-  "dependencies": {
-    "sfdx-cli": "^7.178.0",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.2",
-    "yarn": "^1.22.19"
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=16.13.0"
   },
