update prettier ignore

--- a/ServiceDocumentSamples/.prettierignore
+++ b/ServiceDocumentSamples/.prettierignore
@@ -8,7 +8,7 @@
 .vscode
 
 # Ignore apex cls and apex trigger files:
-**/classes/FireCreateServiceDocumentInvocableAction.cls
-**/triggers/ServiceDocumentCreation.trigger
+**/*.cls
+**/*.trigger
 
 coverage/
